--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container2">
         <div class="project1-info">
         <p class="star">Starbeat.</p>
-        <p class="star-para">Designing the website for the <br>startup Create subscriptions, <br>
+        <p class="star-para">Designed the website for the <br>startup Create subscriptions, <br>
             host live events, video sessions, <br>polls, sell Merchandise, NFTs <br>
             and more! </p>
         <button class="star-btn">View Case Study</button>
@@ -56,7 +56,7 @@
             </div>
         <div class="project1-info">
         <p class="star">Flying Saucer.</p>
-        <p class="star-para">Designing the best onlinebr
+        <p class="star-para">Designed the best onlinebr
              platform for the healthy and <br> delicious frozen’s.</p>
         <button class="star-btn">View Case Study</button>
         </div>
@@ -65,7 +65,7 @@
     <div class="container4">
         <div class="project1-info">
         <p class="star">AZ gems.</p>
-        <p class="star-para">Designing the platform for <br>
+        <p class="star-para">Designed the platform for <br>
             seafood processing and <br>shipping industry.</p>
         <button class="star-btn">View Case Study</button>
         </div>
@@ -81,7 +81,7 @@
     <div class="container5">
         <div class="project1-info">
             <p class="star1">ParkEZ.</p>
-        <p class="park-para">Designing an applications to <br>
+        <p class="park-para">Designed an applications to <br>
              the professionals that reduces <br>
               time for parking.</p>
         <button class="star-btn">View Case Study</button>
@@ -97,7 +97,7 @@
             </div>
         <div class="project1-info">
         <p class="star">Bus Us.</p>
-        <p class="star-para">Designing an application for <br> 
+        <p class="star-para">Designed an application for <br> 
             local bus ticketing and live <br>tracking status.</p>
         <button class="star-btn">View Case Study</button>
         </div>
