--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         <p class="park-para">Designed an applications to <br>
              the professionals that reduces <br>
               time for parking.</p>
-        <button class="star-btn">View Case Study</button>
+            <a href="https://www.behance.net/gallery/181932145/Corporate-car-parking-app">
+        <button class="star-btn">View Case Study</button></a>
         </div>
         <div class="project4-image">
         <img src="Images/Project4.png" alt="">
