--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <p class="star">Flying Saucer.</p>
         <p class="star-para">Designed the best onlinebr
              platform for the healthy and <br> delicious frozen’s.</p>
-        <button class="star-btn">View Case Study</button>
+            <a href="http://127.0.0.1:5500/saucer.html">
+        <button class="star-btn">View Case Study</button></a>
         </div>
     </div>
 
