--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         <p class="star">Bus Us.</p>
         <p class="star-para">Designed an application for <br> 
             local bus ticketing and live <br>tracking status.</p>
-        <button class="star-btn">View Case Study</button>
+            <a href="https://www.behance.net/gallery/114153945/BusUs-UX-Case-Study">
+        <button class="star-btn">View Case Study</button></a>
         </div>
     </div>
 
