--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <p class="star">AZ gems.</p>
         <p class="star-para">Designed the platform for <br>
             seafood processing and <br>shipping industry.</p>
-        <button class="star-btn">View Case Study</button>
+            <a href="https://medium.com/@ganeshreddy.s950/ui-ux-case-study-redesigning-az-gems-website-1872539bd395">
+        <button class="star-btn">View Case Study</button></a>
         </div>
         <div class="project1-image">
         <img src="Images/project3.png" alt="">
