--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
             <img src="Icons/icons8-linkedin.svg" alt="" class="icon-size"></a>
             <a href="https://www.behance.net/ganeshreddy6">
             <img src="Icons/icons8-behance.svg" alt="" class="icon-size"></a>
-            <a href="https://dribbble.com/gany1717">
-            <img src="Icons/icons8-dribble.svg" alt="" id="icon-size"></a>
+            <a href="https://medium.com/@ganeshreddy.s950">
+            <img src="Icons/icons8-medium.svg" alt="" id="icon-size"></a>
             <a href="https://www.instagram.com/reddy_vari_ganesh/">
             <img src="Icons/icons8-instagram.svg" alt="" class="icon-size"></a>
         </div>
