--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="info">
             <p class="name">I'm Ganesh</p>
             <p class="role"> UI/UX, <br> Product Designer</p>
-            <p class="description">I design and attractive user-friendly designs <br>
+            <p class="description">I design and create attractive user-friendly designs <br>
                 for website and mobile app.</p>
             <button class="btn1">Lets Chat</button>
 
